--- a/StrongSwan/5.3.5/ipsec.conf
+++ b/StrongSwan/5.3.5/ipsec.conf
@@ -12,3 +12,4 @@ conn azure
         rightsubnet=10.11.0.0/16,10.12.0.0/16 #Azure VNET address space
         auto=route
         keyexchange=ikev2 # Mandatory for Dynamic / Route-based gateway
+        mark=2 # Needed to assign our tunnel to a specific vti
